# android-app

./: .gitignore  .gitmodules  README.md  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  rpc-server-main.cpp
app/src/main/cpp/android_compat/: getline_compat.c  getline_compat.h
app/src/main/java/com/llama/rpcapp/: AppLogStore.java  AppLogTree.java  MainActivity.java  NativeRpcServer.java  RpcApp.java  RpcServerService.java  ServerConfig.java  ServerService.java  SettingsRepository.java  StorageServer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/llama/rpcapp/: MainActivityTest.java  ServerConfigTest.java  SettingsRepositoryTest.java  StorageServerTest.java
gradle/: libs.versions.toml
